finished code and added some visuals

--- a/Cash Register/Form1.resx
+++ b/Cash Register/Form1.resx
@@ -117,4 +117,88 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAQAEBAQAAAAAAAoAQAARgAAABAQAAAAAAAAaAUAAG4BAAAgIBAAAAAAAOgCAADWBgAAICAAAAAA
+        AACoCAAAvgkAACgAAAAQAAAAIAAAAAEABAAAAAAAwAAAAAAAAAAAAAAAAAAAAAAAAAD///8ABfP8AAJk
+        /wAGCN0AhAjyAKUARgDUAAAA6qsCABS3HwARZAAABSxWADpxkADAwMAAgICAAEBAQAAAAAAA///////8
+        zd3////////83f/////////N//////////z///////////////7u7qqq//7u7u7u7ur83d3d3u7u7vDM
+        zMzN3d7u/wzMzMzMzd7/8AzMzMzADv//8AzMwAAN////8MAADMz/////AAzMzP////8MzMzM//////AM
+        zMz/gP+A/+D/4P/4//j//P/8/gD+AOAA4ACAAIAAAAAAAAAAAACAAIAAwADAAOAA4AD4APgA/gD+AP4A
+        /gD+AP4AKAAAABAAAAAgAAAAAQAIAAAAAABAAQAAAAAAAAAAAAAAAAAAAAAAAP///wDM//8Amf//AGb/
+        /wAz//8AAP//AP/M/wDMzP8Amcz/AGbM/wAzzP8AAMz/AP+Z/wDMmf8AmZn/AGaZ/wAzmf8AAJn/AP9m
+        /wDMZv8AmWb/AGZm/wAzZv8AAGb/AP8z/wDMM/8AmTP/AGYz/wAzM/8AADP/AP8A/wDMAP8AmQD/AGYA
+        /wAzAP8AAAD/AP//zADM/8wAmf/MAGb/zAAz/8wAAP/MAP/MzADMzMwAmczMAGbMzAAzzMwAAMzMAP+Z
+        zADMmcwAmZnMAGaZzAAzmcwAAJnMAP9mzADMZswAmWbMAGZmzAAzZswAAGbMAP8zzADMM8wAmTPMAGYz
+        zAAzM8wAADPMAP8AzADMAMwAmQDMAGYAzAAzAMwAAADMAP//mQDM/5kAmf+ZAGb/mQAz/5kAAP+ZAP/M
+        mQDMzJkAmcyZAGbMmQAzzJkAAMyZAP+ZmQDMmZkAmZmZAGaZmQAzmZkAAJmZAP9mmQDMZpkAmWaZAGZm
+        mQAzZpkAAGaZAP8zmQDMM5kAmTOZAGYzmQAzM5kAADOZAP8AmQDMAJkAmQCZAGYAmQAzAJkAAACZAP//
+        ZgDM/2YAmf9mAGb/ZgAz/2YAAP9mAP/MZgDMzGYAmcxmAGbMZgAzzGYAAMxmAP+ZZgDMmWYAmZlmAGaZ
+        ZgAzmWYAAJlmAP9mZgDMZmYAmWZmAGZmZgAzZmYAAGZmAP8zZgDMM2YAmTNmAGYzZgAzM2YAADNmAP8A
+        ZgDMAGYAmQBmAGYAZgAzAGYAAABmAP//MwDM/zMAmf8zAGb/MwAz/zMAAP8zAP/MMwDMzDMAmcwzAGbM
+        MwAzzDMAAMwzAP+ZMwDMmTMAmZkzAGaZMwAzmTMAAJkzAP9mMwDMZjMAmWYzAGZmMwAzZjMAAGYzAP8z
+        MwDMMzMAmTMzAGYzMwAzMzMAADMzAP8AMwDMADMAmQAzAGYAMwAzADMAAAAzAP//AADM/wAAmf8AAGb/
+        AAAz/wAAAP8AAP/MAADMzAAAmcwAAGbMAAAzzAAAAMwAAP+ZAADMmQAAmZkAAGaZAAAzmQAAAJkAAP9m
+        AADMZgAAmWYAAGZmAAAzZgAAAGYAAP8zAADMMwAAmTMAAGYzAAAzMwAAADMAAP8AAADMAAAAmQAAAGYA
+        AAAzAAAAAADuAAAA3QAAALsAAACqAAAAiAAAAHcAAABVAAAARAAAACIAAAARAADuAAAA3QAAALsAAACq
+        AAAAiAAAAHcAAABVAAAARAAAACIAAAARAADuAAAA3QAAALsAAACqAAAAiAAAAHcAAABVAAAARAAAACIA
+        AAARAAAA7u7uAN3d3QC7u7sAqqqqAIiIiAB3d3cAVVVVAERERAAiIiIAERERAAAAAAD/////////////
+        //f3+fn5//////////////////f5+f//////////////////9/n////////////////////3////////
+        ///////////////////////8/Pz8/P39/f3////8/Pz8/Pz8/Pz8/Pz9//f5+fn5+fn5/Pz8/Pz8/P/1
+        9/f39/f39/n5+fn8/Pz///X39/f39/f39/f3+fn8////9fX39/f39/f39wAA/P//////9fX39/f3AAAA
+        APn/////////9fcAAAAA9/f3//////////8AAAD39/f39///////////APf39/f39/f////////////1
+        9ff39/f3/4D/gP/g/+D/+P/4//z//P4A/gDgAOAAgACAAAAAAAAAAAAAgACAAMAAwADgAOAA+AD4AP4A
+        /gD+AP4A/gD+ACgAAAAgAAAAQAAAAAEABAAAAAAAgAIAAAAAAAAAAAAAAAAAAAAAAAD///8ABfP8AAJk
+        /wAGCN0AhAjyAKUARgDUAAAA6qsCABS3HwARZAAABSxWADpxkADAwMAAgICAAEBAQAAAAAAA////////
+        //////////////////////////////////////////////3v//////////////////3d7q//////////
+        //////3d0N6v//////////////3d0Aztr/rv///////////N0AzN7uqu7v//////////wAzN3e7u7d7/
+        //////////zN3d3u7u7v/////////////N3d7u7v///////////////N3e7u/////////////////N7u
+        7/////////////////+u7v////////////7u7qqqqq7//////////u7u7u7u6qqq/////////N3d3d7u
+        7u7qqq////////DMzMzN3d7u7qqv////////DMzMzMzN3u7uqv////////AMzMzMwA7u7ur/////////
+        8AzMwAAN3u7ur//////////wwAAMzM3e7ur//////////wAMzMzMzd7u7/////////8MzMzMzMzN3u7/
+        ////////8AzMzMzMzM3e7//////////wDMzMzMzMzd7v//////////AMzMzMzMzN3v//////////8AzM
+        zMzMzM/////////////wDMzMzM////////////////AMzM//////////////////8M//////////////
+        //////////////////////////////////////////+f///+B///+Af//+AAf/+AAB//gAAf/4AAH/+A
+        AB//4AB///gB///8A//+AAf/4AAH/4AAB/8AAAP/AAAD/4AAAf/AAAH/4AAA//gAAH/+AAA//gAAH/4A
+        AAf/gAAB/+AAAf/4AAH//gAH//+AH///4H////n//////ygAAAAgAAAAQAAAAAEACAAAAAAAgAQAAAAA
+        AAAAAAAAAAAAAAAAAAD///8AzP//AJn//wBm//8AM///AAD//wD/zP8AzMz/AJnM/wBmzP8AM8z/AADM
+        /wD/mf8AzJn/AJmZ/wBmmf8AM5n/AACZ/wD/Zv8AzGb/AJlm/wBmZv8AM2b/AABm/wD/M/8AzDP/AJkz
+        /wBmM/8AMzP/AAAz/wD/AP8AzAD/AJkA/wBmAP8AMwD/AAAA/wD//8wAzP/MAJn/zABm/8wAM//MAAD/
+        zAD/zMwAzMzMAJnMzABmzMwAM8zMAADMzAD/mcwAzJnMAJmZzABmmcwAM5nMAACZzAD/ZswAzGbMAJlm
+        zABmZswAM2bMAABmzAD/M8wAzDPMAJkzzABmM8wAMzPMAAAzzAD/AMwAzADMAJkAzABmAMwAMwDMAAAA
+        zAD//5kAzP+ZAJn/mQBm/5kAM/+ZAAD/mQD/zJkAzMyZAJnMmQBmzJkAM8yZAADMmQD/mZkAzJmZAJmZ
+        mQBmmZkAM5mZAACZmQD/ZpkAzGaZAJlmmQBmZpkAM2aZAABmmQD/M5kAzDOZAJkzmQBmM5kAMzOZAAAz
+        mQD/AJkAzACZAJkAmQBmAJkAMwCZAAAAmQD//2YAzP9mAJn/ZgBm/2YAM/9mAAD/ZgD/zGYAzMxmAJnM
+        ZgBmzGYAM8xmAADMZgD/mWYAzJlmAJmZZgBmmWYAM5lmAACZZgD/ZmYAzGZmAJlmZgBmZmYAM2ZmAABm
+        ZgD/M2YAzDNmAJkzZgBmM2YAMzNmAAAzZgD/AGYAzABmAJkAZgBmAGYAMwBmAAAAZgD//zMAzP8zAJn/
+        MwBm/zMAM/8zAAD/MwD/zDMAzMwzAJnMMwBmzDMAM8wzAADMMwD/mTMAzJkzAJmZMwBmmTMAM5kzAACZ
+        MwD/ZjMAzGYzAJlmMwBmZjMAM2YzAABmMwD/MzMAzDMzAJkzMwBmMzMAMzMzAAAzMwD/ADMAzAAzAJkA
+        MwBmADMAMwAzAAAAMwD//wAAzP8AAJn/AABm/wAAM/8AAAD/AAD/zAAAzMwAAJnMAABmzAAAM8wAAADM
+        AAD/mQAAzJkAAJmZAABmmQAAM5kAAACZAAD/ZgAAzGYAAJlmAABmZgAAM2YAAABmAAD/MwAAzDMAAJkz
+        AABmMwAAMzMAAAAzAAD/AAAAzAAAAJkAAABmAAAAMwAAAAAA7gAAAN0AAAC7AAAAqgAAAIgAAAB3AAAA
+        VQAAAEQAAAAiAAAAEQAA7gAAAN0AAAC7AAAAqgAAAIgAAAB3AAAAVQAAAEQAAAAiAAAAEQAA7gAAAN0A
+        AAC7AAAAqgAAAIgAAAB3AAAAVQAAAEQAAAAiAAAAEQAAAO7u7gDd3d0Au7u7AKqqqgCIiIgAd3d3AFVV
+        VQBEREQAIiIiABEREQAAAAAA////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////+fz/////////////////////////
+        ////////////+fn5/Pz9////////////////////////////////+fn5+fX5/P3/////////////////
+        ////////////+fn5+fX19/z5/f///fz///////////////////////f5+fX19/f5/Pz8/f38/Pz/////
+        ////////////////9/X19/f5+fn8/Pz8/Pn5/P//////////////////////9/f5+fn5+fz8/Pz8/Pz/
+        //////////////////////////f5+fn5/Pz8/Pz///////////////////////////////f5+fn8/Pz8
+        //////////////////////////////////f5/Pz8/P////////////////////////////////////38
+        /Pz//////////////////////////Pz8/Pz9/f39/f39/P////////////////////z8/Pz8/Pz8/Pz8
+        /P39/f39//////////////////f5+fn5+fn5/Pz8/Pz8/Pz9/f39////////////////9ff39/f39/f5
+        +fn5/Pz8/Pz9/f3/////////////////9ff39/f39/f39/f5+fz8/Pz8/f3/////////////////9fX3
+        9/f39/f39wAA/Pz8/Pz8/f////////////////////X19/f39wAAAAD5+fz8/Pz8/f//////////////
+        ///////19wAAAAD39/f3+fn8/Pz8/f////////////////////8AAAD39/f39/f39/n5/Pz8/P//////
+        /////////////wD39/f39/f39/f39/f5+fz8/P////////////////////X19/f39/f39/f39/f3+fn8
+        /P/////////////////////19ff39/f39/f39/f39/n5/Pz/////////////////////9fX39/f39/f3
+        9/f39/f5+fz///////////////////////X19/f39/f39/f39/f3///////////////////////////1
+        9ff39/f39/f3////////////////////////////////9fX39/f3////////////////////////////
+        //////////X3////////////////////////////////////////////////////////////////////
+        /////////////////////////////////////5////4H///4B///4AB//4AAH/+AAB//gAAf/4AAH//g
+        AH//+AH///wD//4AB//gAAf/gAAH/wAAA/8AAAP/gAAB/8AAAf/gAAD/+AAAf/4AAD/+AAAf/gAAB/+A
+        AAH/4AAB//gAAf/+AAf//4Af///gf///+f//////
+</value>
+  </data>
 </root>
